--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
                 <a href="index.html"><span>Web</span>Studio</a>
                 <ul>
                     <li>
-                        <a href="">Студія</a>
+                        <a href="#">Студія</a>
                     </li>
                     <li>
-                        <a href="">Портфоліо</a>
+                        <a href="#">Портфоліо</a>
                     </li>
                     <li>
-                        <a href="">Контакти</a>
+                        <a href="#">Контакти</a>
                     </li>
                 </ul>
             </nav>
