--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                 <a href="index.html"><span>Web</span>Studio</a>
                 <ul>
                     <li>
-                        <a href="#">Студія</a>
+                        <a href="index.html">Студія</a>
                     </li>
                     <li>
                         <a href="#">Портфоліо</a>
@@ -36,7 +36,7 @@
         <main>
             <!--main-->
             <section>
-                <h1>Ефективні рішення для <br />вашого бізнесу</h1>
+                <h1>Ефективні рішення для вашого бізнесу</h1>
                 <button type="button">Замовити послугу</button>
             </section>
             <!--Особливості роботи-->
@@ -118,8 +118,8 @@
             <address>
                 <ul>
                     <li>
-                        <a href="https://goo.gl/maps/TSDpTPrTKKS6w9gq7" target="_blank"
-                            >м. Київ, пр-т Лесі Українки, 26
+                        <a href="https://goo.gl/maps/TSDpTPrTKKS6w9gq7" target="_blank">
+                            м. Київ, пр-т Лесі Українки, 26
                         </a>
                     </li>
                     <li>
